# VSS-Simulator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL.md  LICENSE  Makefile  README.md  Simulador.cbp  Simulador.depend  Simulador.layout  Simulator  VSS-Simulation  VSS-Simulator  atom-config.sh  configure.sh  uncrustify.cfg
bins/: Binarios
bullet/BulletCollision/BroadphaseCollision/: btAxisSweep3.h  btBroadphaseInterface.h  btBroadphaseProxy.h  btCollisionAlgorithm.h  btDbvt.h  btDbvtBroadphase.h  btDispatcher.h  btMultiSapBroadphase.cpp  btMultiSapBroadphase.h  btOverlappingPairCache.cpp  btOverlappingPairCache.h  btQuantizedBvh.cpp  btQuantizedBvh.h  btSimpleBroadphase.cpp  btSimpleBroadphase.h
bullet/BulletCollision/CollisionDispatch/: SphereTriangleDetector.cpp  SphereTriangleDetector.h  btActivatingCollisionAlgorithm.h  btBox2dBox2dCollisionAlgorithm.cpp  btBox2dBox2dCollisionAlgorithm.h  btBoxBoxCollisionAlgorithm.cpp  btBoxBoxCollisionAlgorithm.h  btBoxBoxDetector.cpp  btBoxBoxDetector.h  btCollisionCreateFunc.h  btCollisionDispatcher.cpp  btCollisionDispatcher.h  btCollisionObject.cpp  btCollisionObject.h  btCollisionObjectWrapper.h  btCollisionWorld.cpp  btCollisionWorld.h  btCompoundCollisionAlgorithm.cpp  btCompoundCollisionAlgorithm.h  btCompoundCompoundCollisionAlgorithm.cpp  btCompoundCompoundCollisionAlgorithm.h  btConvex2dConvex2dAlgorithm.cpp  btConvex2dConvex2dAlgorithm.h  btConvexConcaveCollisionAlgorithm.cpp  btConvexConcaveCollisionAlgorithm.h  btConvexConvexAlgorithm.cpp  btConvexConvexAlgorithm.h  btConvexPlaneCollisionAlgorithm.cpp  btConvexPlaneCollisionAlgorithm.h  btDefaultCollisionConfiguration.cpp  btDefaultCollisionConfiguration.h  btEmptyCollisionAlgorithm.h  btGhostObject.cpp  btGhostObject.h  btHashedSimplePairCache.h  btInternalEdgeUtility.cpp  btInternalEdgeUtility.h  btManifoldResult.cpp  btManifoldResult.h  btSimulationIslandManager.cpp  (+8 more)
bullet/BulletCollision/CollisionShapes/: btBox2dShape.h  btBoxShape.h  btBvhTriangleMeshShape.cpp  btBvhTriangleMeshShape.h  btCapsuleShape.cpp  btCapsuleShape.h  btCollisionShape.cpp  btCollisionShape.h  btCompoundShape.cpp  btCompoundShape.h  btConcaveShape.h  btConeShape.h  btConvex2dShape.h  btConvexHullShape.cpp  btConvexHullShape.h  btConvexInternalShape.h  btConvexPointCloudShape.cpp  btConvexPointCloudShape.h  btConvexPolyhedron.cpp  btConvexPolyhedron.h  btConvexShape.h  btConvexTriangleMeshShape.cpp  btConvexTriangleMeshShape.h  btCylinderShape.h  btEmptyShape.cpp  btEmptyShape.h  btHeightfieldTerrainShape.cpp  btHeightfieldTerrainShape.h  btMinkowskiSumShape.h  btMultiSphereShape.cpp  btMultiSphereShape.h  btMultimaterialTriangleMeshShape.cpp  btOptimizedBvh.cpp  btOptimizedBvh.h  btPolyhedralConvexShape.cpp  btPolyhedralConvexShape.h  btScaledBvhTriangleMeshShape.h  btShapeHull.cpp  btShapeHull.h  btSphereShape.cpp  (+15 more)
bullet/BulletCollision/Gimpact/: btBoxCollision.h  btClipPolygon.h  btCompoundFromGimpact.h  btContactProcessing.h  btGImpactBvh.cpp  btGImpactBvh.h  btGImpactCollisionAlgorithm.cpp  btGImpactCollisionAlgorithm.h  btGImpactMassUtil.h  btGImpactQuantizedBvh.cpp  btGImpactQuantizedBvh.h  btGImpactShape.cpp  btGImpactShape.h  btGenericPoolAllocator.h  btGeometryOperations.h  btQuantization.h  btTriangleShapeEx.h  gim_array.h  gim_basic_geometry_operations.h  gim_box_collision.h  gim_box_set.h  gim_contact.h  gim_geom_types.h  gim_geometry.h  gim_linear_math.h  gim_math.h  gim_memory.h  gim_radixsort.h  gim_tri_collision.h
bullet/BulletCollision/NarrowPhaseCollision/: btContinuousConvexCollision.cpp  btContinuousConvexCollision.h  btConvexCast.h  btConvexPenetrationDepthSolver.h  btDiscreteCollisionDetectorInterface.h  btGjkConvexCast.cpp  btGjkConvexCast.h  btGjkEpa2.cpp  btGjkEpa2.h  (+17 more)
bullet/LinearMath/: btAabbUtil2.h  btAlignedObjectArray.h  btConvexHull.cpp  btConvexHull.h  btConvexHullComputer.cpp  btConvexHullComputer.h  btDefaultMotionState.h  btGeometryUtil.h  btGrahamScan2dConvexHull.h  btHashMap.h  btIDebugDraw.h  btMatrix3x3.h  btPolarDecomposition.cpp  btPolarDecomposition.h  btPoolAllocator.h  btQuaternion.h  btScalar.h  btSerializer.h  btStackAlloc.h  btStraight.cpp  btStraight.h  btTransformUtil.h
include/: Simulator.h
include/Communications/: ControlReceiverAdapter.h
reports/: relatorios
src/: Arbiter.cpp  Arbiter.h  Header.h  Main.cpp  Physics.cpp  Physics.h  RobotPhysics.cpp  RobotPhysics.h  RobotStrategy.cpp  RobotStrategy.h  Scenario.cpp  Scenario.h  Simulator.cpp  Simulator.h  Sir.h  main.cpp
src/interface/: interface.cpp
src/strategies/: ModelStrategy.cpp  ModelStrategy.h  Strategy.cpp  Strategy.h  StrategyBasic.cpp  StrategyBasic.h
test/: CommandTests.cpp
utils/: Constants.h  GLDebugDrawer.cpp  GLDebugDrawer.h  GLDebugDrawer.htest  InputParser.cpp  InputParser.hpp  StartPositionsHelper.cpp  StartPositionsHelper.hpp
utils/includes/: boost.h
(+53 files in other folders)
